# scope_func

./: CMakeLists.txt  README.md  build.sh  main.cc
scope/: scope_exit.hpp
